# docs/swagger.yaml
@@ -243,7 +243,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UpdateDictionaryRequestBody'
+              $ref: '#/components/schemas/UpdateDictionaryRequest'
       responses:
         '204':
           description: Returns NO_CONTENT when successful
@@ -441,7 +441,7 @@ components:
         - value
         - description
         - language
-    UpdateDictionaryRequestBody:
+    UpdateDictionaryRequest:
       type: object
       properties:
         value:
